Support reading chan atoms with empty channel descriptions.

Fixes ticket 263.